@startuml

title Diagrama UML - CyberEats Backend

entity category_product {
    *id
    --
    label
}

entity products {
    *id
    --
    label
    slug
    desc
    price
}

entity order_item {
    *id
    --
    quantity
}

entity user_order {
    *id
    --
    status
}

entity logs {
    *id
    --
    info
    timestamp
}

entity category_pc {
    *id
    --
    label
    price
}

entity pc {
    *id
    --
    label
    slug
    runtime
    specs
    working_since
}

entity booking {
    *id
    --
    hours
}

entity reports {
    *id
    --
    priority
    desc
}

entity user {
    *id
    --
    name
    surname
    born_date
    username
    password
}

category_product ||--o| products
products ||--o{ item_order
item_order }o--|| user_order

category_pc ||--o{ pc

pc ||--o{ booking
user ||--o{ booking

pc ||--o{ reports
user ||--o{ reports

user ||--|| user_order

@enduml